# hindawi-dl

./: .gitignore  README.md  all_books_data.py  books_data.csv  dl.py  dl.sh  download.py  pyproject.toml
