[tool.poetry]
name = "hindawi_dl"
version = "0.1.0"
description = "Download books from hindawi org website"
authors = ["Ahmed Shahwan <ahmed@shahwan.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
flake8-black = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
